# grist_python_sdk

./: .gitignore  README.md  pyproject.toml
src/grist_python_sdk/: __init__.py  client.py
src/grist_python_sdk/api/: attachment.py  column.py  document.py  organazation.py  record.py  table.py  typing.py  utils.py  workspace.py
src/grist_python_sdk/client/: base.py  doc.py  grist.py  organazation.py  table.py  utils.py  workspace.py
src/grist_python_sdk/typing/: orgs.py  workspaces.py
tests/: test_client.py
tests/api/: test_attachment.py  test_column.py  test_document.py  test_organization.py  test_record.py  test_table.py  test_workspace.py
tests/client/: test_base.py  test_grist.py  test_organization.py  test_workspace.py  utils.py
