[project]
name = "grist-python-sdk"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = [
    "types-requests>=2.31.0.20240125",
    "urllib3>=2.2.0",
    "urlparse3>=1.1",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "requests_mock>=1.11.0",
]

[tool.mypy]
strict=true

[tool.hatch.metadata]
allow-direct-references = true
